# rust-binance-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  b.com.cttf.sh  b.us.cttf.sh  build.rs  cargo-cfc  cargo-pre-commit  cliff.toml  config.toml  filename.sh  rust-toolchain  rust-toolchain.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci-nightly.yml  ci-stable.yml
data/: order_logger.txt
src/: account_info.rs  arg_matches.rs  binance_account_info.rs  binance_auto_buy.rs  binance_auto_sell.rs  binance_avg_price.rs  binance_com_processing.rs  binance_config_auto_sell.rs  binance_config_auto_sell_all.rs  binance_context.rs  binance_distribution_processing.rs  binance_exchange_info.rs  binance_get_klines_cmd.rs  binance_history.rs  binance_klines.rs  binance_market.rs  binance_market_order_cmd.rs  binance_my_trades.rs  binance_open_orders.rs  binance_order_response.rs  binance_orders.rs  binance_sell_market.rs  binance_signature.rs  binance_trade.rs  binance_us_processing.rs  binance_verify_order.rs  binance_withdraw_cmd.rs  common.rs  configuration.rs  date_time_utc.rs  de_string_or_number.rs  de_string_to_time_ms.rs  de_string_to_utc_time_ms.rs  de_vec_to_hashmap.rs  exchange_info.rs  main.rs  order_response.rs  process_binance_com.rs  process_binance_us.rs  process_taxbit.rs  (+5 more)
test_data/: dist_file_one_rec.csv  dist_file_several_recs.csv
tests/: cli.rs
