[package]
name = "binance-cli"
version = "0.3.7"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
serde_json = "1.0.78"
strum_macros = "0.22.0"
clap = { version = "3.0.13", features = ["env"] }
hmac = "0.11.0"
sha2 = "0.9.9"
hex-literal = "0.3.4"
chrono = "0.4.19"
hex = "0.4.3"
rust_decimal = { version = "1.20.0", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.20.0"
test-env-log = "0.2.8"
toml = "0.5.8"
semver = { version = "1.0.4", features = ["serde"] }
lazy_static = "1.4.0"
rusty-money = "0.4.1"
separator = "0.4.1"
csv = "1.1.6"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"

[build-dependencies]
vergen = "5.1.17"
