[package]
name = "binance-cli"
version = "0.7.2"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
env_logger = "0.9.0"
#custom-logger = { git = "https://github.com/winksaville/custom-logger", version = "0.1.0" }
log = "0.4.17"
serde_json = "1.0.81"
strum_macros = "0.24.0"
clap = { version = "3.2.6", features = ["env"] }
hmac = "0.12.1"
sha2 = "0.10.2"
hex-literal = "0.3.4"
chrono = "0.4.19"
hex = "0.4.3"
rust_decimal = { version = "1.25.0", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.25.0"
test-env-log = "0.2.8"
toml = "0.5.9"
semver = { version = "1.0.10", features = ["serde"] }
lazy_static = "1.4.0"
rusty-money = "0.4.1"
separator = "0.4.1"
csv = "1.1.6"
time_ms_conversions = { git = "https://github.com/winksaville/time-ms-conversions" }
serde_utc_time_ms = { git = "https://github.com/winksaville/serde-utc-time-ms" }
dec-utils = { git = "https://github.com/winksaville/dec-utils" }
tokentaxrec = { git = "https://github.com/winksaville/tokentaxrec" }
taxbitrec = { git = "https://github.com/winksaville/taxbitrec" }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[build-dependencies]
vergen = "7.2.1"
