[package]
name = "binance-cli"
version = "0.7.4"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
env_logger = "0.9.3"
#custom-logger = { git = "https://github.com/winksaville/custom-logger", version = "0.1.0" }
log = "0.4.17"
serde_json = "1.0.91"
strum_macros = "0.24.3"
clap = { version = "3.2.23", features = ["env"] }
hmac = "0.12.1"
sha2 = "0.10.6"
hex-literal = "0.3.4"
chrono = "0.4.23"
hex = "0.4.3"
rust_decimal = { version = "1.27.0", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.27.0"
test-env-log = "0.2.8"
toml = "0.5.10"
semver = { version = "1.0.16", features = ["serde"] }
lazy_static = "1.4.0"
rusty-money = "0.4.1"
separator = "0.4.1"
csv = "1.1.6"
time_ms_conversions = { git = "https://github.com/winksaville/time-ms-conversions" }
serde_utc_time_ms = { git = "https://github.com/winksaville/serde-utc-time-ms" }
dec-utils = { git = "https://github.com/winksaville/dec-utils" }
tokentaxrec = { git = "https://github.com/winksaville/tokentaxrec" }
taxbitrec = { git = "https://github.com/winksaville/taxbitrec" }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"

[build-dependencies]
vergen = "7.5.0"
